Simple style added

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>DEV SAFADÃO</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
+
+		<!-- Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,900' rel='stylesheet' type='text/css'>
+
+		<!-- CSS <3 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+
+    <title>DEV SAFADÃO</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
 </head>
 <body>
-    <h3>DEV SAFADÃO</h3>
-    <input id="username" type="text" placeholder="Digite seu nome de usuário do github." autofocus/>
-    <span id="output"></span>
-    <button id="btn">Buscar</button>
-    <script src="js/index.js"></script>
+
+  <div class="container">
+    <h1 class="title">Qual o seu nome de Dev Safadão?</h1>
+    <input id="username" class="input" type="text" placeholder="Seu usuário do github." autofocus/>
+    <button id="btn" class="btn"></button>
+    <span id="output" class="output">dsdsd</span>
+  </div>
+
+  <script src="js/index.js"></script>
 </body>
 </html>
