Add load and output style

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,10 @@
     <h1 class="title">Qual o seu nome de Dev Safadão?</h1>
     <input id="username" class="input" type="text" placeholder="Seu usuário do github." autofocus/>
     <button id="btn" class="btn"></button>
-    <span id="output" class="output">dsdsd</span>
+    <div class="output">
+      <img id="img" src="img/P5ApKIy.gif" class="image hide">
+      <span id="output"></span>
+    </div>
   </div>
 
   <script src="js/index.js"></script>
